# OS-Bench

./: .gitignore  INSTALL.md  LICENSE  README.md
.claude/: settings.local.json
UI/: tech-spec.md
UI/app/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
UI/app/openbench/: .env.local.example  next.config.mjs  package.json  tailwind.config.js
UI/app/src/: App.tsx  index.css
UI/app/src/components/: Buttons.tsx  GlassCard.tsx  GlassCard2.tsx  Navigation.tsx  PageHero.tsx  RouteCleanup.tsx  SectionLabel.tsx  StatCard.tsx  WaveBackground.tsx
UI/app/src/hooks/: useLenis.ts  useWaveShader.ts
UI/app/src/pages/: Blog.tsx  (+8 more)
openbench/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
openbench/apps/bench-desktop/: README.md  package.json
openbench/apps/bench-desktop/src-tauri/: Cargo.toml  tauri.conf.json
openbench/apps/bench-desktop/src-tauri/icons/: icon.icns
openbench/apps/bench-desktop/src-tauri/src/: lib.rs  main.rs
openbench/apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
openbench/docs/: ai-pipelines.md  api.md  architecture.md  demo-script.md  local-dev.md
openbench/docs/PRD/: PRD_v1.txt  PRD_v2_full_spec.txt
openbench/docs/runbooks/: incident.md
openbench/infra/docker/: api.Dockerfile  web.Dockerfile
openbench/sample-data/: README.md  sds.md
openbench/scripts/: dev.sh  gen-icons.js  gen-icons.ps1  gen-icons.sh  migrate.sh  reset.sh  seed-demo.sh  test-e2e.mjs
openbench/services/api/: alembic.ini  pyproject.toml  requirements.txt
(+205 files in other folders)
